--- a/app/templates/backend/client_templates/client_dashboard.html
+++ b/app/templates/backend/client_templates/client_dashboard.html
@@ -1,6 +1,13 @@
-{% extends "backend/base.html" %}
+{% extends "layouts/base.html" %}
 
-{%block body%}
+{% block title %} Dashboard {% endblock %} 
+
+<!-- Specific Page CSS goes HERE  -->
+{% block stylesheets %}{% endblock stylesheets %}
+
+{% block content %}
+
+
 
 <div class="container">
     <h1>Willkommen {{clientname}}!</h1>
@@ -13,6 +20,10 @@
 
 
 
-{% endblock %}
 
 
+
+{% endblock content %}
+
+<!-- Specific Page JS goes HERE  -->
+{% block javascripts %}{% endblock javascripts %}
