--- a/app/templates/backend/client_templates/client_password_reset_request.html
+++ b/app/templates/backend/client_templates/client_password_reset_request.html
@@ -21,9 +21,9 @@
                     <div class="col-12 d-flex align-items-center justify-content-center">
                         <div class="bg-white shadow border-0 rounded border-light p-4 p-lg-5 w-100 fmxw-500">
                             <div class="text-center text-md-center mb-4 mt-md-0">
-                                <h3 class="mb-0 h3">Neues Passwort festlegen</h3>
+                                <h1 class="mb-0 h3">Restaurant Login</h1>
                             </div>
-                            <form action="{{ url_for('client_bp.password_reset_token', token=token) }}" method="POST">
+                            <form action="{{ url_for('client_bp.password_reset_request') }}" method="POST">
                                 <!-- Form -->
                                 <div class="form-group mb-4">
                                     {% if get_flashed_messages() %}
@@ -31,13 +31,13 @@
                                             {{ get_flashed_messages()[0] }}
                                         </div>
                                     {% endif %}
-                                    <label for="email">Bitte gib dein neues Passwort ein.</label>
+                                    <label for="email">Restaurant Email</label>
                                     <div class="input-group">
                                         <span class="input-group-text" id="basic-addon1">
                                             <svg class="icon icon-xs text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path></svg>
                                         </span>
                                         
-                                        <input type="password" class="form-control" id="password" name="password" placeholder="Email" autofocus required>
+                                        <input type="email" class="form-control" id="email" name="email" placeholder="Email" autofocus required>
                                         
                                     </div>  
                                 </div>
@@ -46,7 +46,7 @@
                                 <div class="d-grid">
                                     
                                     
-                                    <button type="submit" class="btn btn-gray-800">Passwort ändern</button>
+                                    <button type="submit" class="btn btn-gray-800">Passwort-Reset-Link senden</button>
 
                                 </div>
                             </form>
@@ -82,4 +82,3 @@
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}{% endblock javascripts %}
-
