--- a/app/templates/backend/client_templates/client_profile.html
+++ b/app/templates/backend/client_templates/client_profile.html
@@ -19,7 +19,9 @@
                 <div class="card card-body border-0 shadow mb-4">
                     <h2 class="h5 mb-4">General information</h2>
 <!-- Datei-Upload im Formular -->
-<form action="{{ url_for('client_bp.profile') }}" method="POST" enctype="multipart/form-data">
+
+
+<form action="{{ url_for('client_bp.profile_update') }}" method="POST" enctype="multipart/form-data">
    <!-- Felder für Restaurantinformationen -->
    <div class="row">
        <div class="col-lg-6">
@@ -90,7 +92,7 @@
 
            <div class="mb-3">
                <label>
-                   <img id="showImage" src="{% if client.photo %}{{ url_for('static', filename=client.photo) }}{% else %}{{ url_for('static', filename='upload/no_image.jpg') }}{% endif %}" class="rounded p-1 bg-primary" width="140" alt="Profilbild">
+                <img id="showImage" src="{% if client.photo %}{{ url_for('static', filename=client.photo) }}{% else %}{{ url_for('static', filename='upload/no_image.jpg') }}{% endif %}" class="rounded p-1 bg-primary" width="140" alt="Profilbild">
                </label>
            </div>
        </div>
