--- a/app/templates/backend/client_templates/client_login.html
+++ b/app/templates/backend/client_templates/client_login.html
@@ -25,7 +25,7 @@
                                 <h1 class="mb-0 h3">Restaurant Login</h1>
                             </div>
                             <form action="{{ url_for('client_bp.login') }}" method="POST" class="mt-4">
-                                <!-- Form -->
+                                <!-- Form für die E-Mail -->
                                 <div class="form-group mb-4">
                                     <label for="email">Restaurant Email</label>
                                     <div class="input-group">
@@ -33,39 +33,43 @@
                                             <svg class="icon icon-xs text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path></svg>
                                         </span>
                                         <input type="email" class="form-control" name="email" id="email" placeholder="Email" autofocus required>
-                                        
                                     </div>  
+                                    <!-- Fehleranzeige für die E-Mail -->
+                                    {% if 'email' in errors %}
+                                        <span class="text-danger">{{ errors['email'] }}</span>
+                                    {% endif %}
                                 </div>
-                                <!-- End of Form -->
-                                <div class="form-group">
-                                    <!-- Form -->
-                                    <div class="form-group mb-4">
-                                        <label for="password">Das Passwort</label>
-                                        <div class="input-group">
-                                            <span class="input-group-text" id="basic-addon2">
-                                                <svg class="icon icon-xs text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd"></path></svg>
-                                            </span>
-                                            
-                                            
-                                            <input type="password" class="form-control" name="password" id="password" value="" placeholder="Passwort" placeholder="Password" required>
-                                        </div>  
-                                    </div>
-                                    <!-- End of Form -->
-                                    <div class="d-flex justify-content-between align-items-top mb-4">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" id="remember">
-                                            <label class="form-check-label mb-0" for="remember">
-                                              Bleib angemeldet
-                                            </label>
-                                        </div>
-                                        <div><a href="{{ url_for('client_bp.password_reset_request') }}" class="small text-right">Password vergessen?</a></div>
-                                    </div>
+                                
+                                <!-- Form für das Passwort -->
+                                <div class="form-group mb-4">
+                                    <label for="password">Das Passwort</label>
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="basic-addon2">
+                                            <svg class="icon icon-xs text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd"></path></svg>
+                                        </span>
+                                        <input type="password" class="form-control" name="password" id="password" placeholder="Passwort" required>
+                                    </div>  
+                                    <!-- Fehleranzeige für das Passwort -->
+                                    {% if 'password' in errors %}
+                                        <span class="text-danger">{{ errors['password'] }}</span>
+                                    {% endif %}
                                 </div>
+                            
+                                <div class="d-flex justify-content-between align-items-top mb-4">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="remember">
+                                        <label class="form-check-label mb-0" for="remember">
+                                          Bleib angemeldet
+                                        </label>
+                                    </div>
+                                    <div><a href="{{ url_for('client_bp.password_reset_request') }}" class="small text-right">Passwort vergessen?</a></div>
+                                </div>
+                            
                                 <div class="d-grid">
-                                    
                                     <button class="btn btn-gray-800" type="submit">Login</button>
                                 </div>
                             </form>
+                            
 
 
 
