--- a/app/templates/backend/admin_templates/admin_password_reset_form.html
+++ b/app/templates/backend/admin_templates/admin_password_reset_form.html
@@ -34,10 +34,12 @@
                                     <label for="email">Bitte gib dein neues Passwort ein.</label>
                                     <div class="input-group">
                                         <span class="input-group-text" id="basic-addon1">
-                                            <svg class="icon icon-xs text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path></svg>
+                                            <svg class="icon icon-xs text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" d="M10 2a4 4 0 00-4 4v4H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-1V6a4 4 0 00-4-4zm-2 8V6a2 2 0 114 0v4H8zm2 4a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd"></path>
+                                              </svg>
                                         </span>
                                         
-                                        <input type="password" class="form-control" id="password" name="password" placeholder="Email" autofocus required>
+                                        <input type="password" class="form-control" id="password" name="password" placeholder="Neues Passwort" autofocus required>
                                         
                                     </div>  
                                 </div>
