--- a/app/templates/backend/client_templates/client_dashboard/includes/sidebar.html
+++ b/app/templates/backend/client_templates/client_dashboard/includes/sidebar.html
@@ -86,7 +86,7 @@
                   role="list" id="submenu-app" aria-expanded="false">
                   <ul class="flex-column nav">
                     <li class="nav-item {% if 'bootstrap-tables' in segment %} active {% endif %}">
-                      <a class="nav-link" href="/tables-bootstrap-tables.html">
+                      <a class="nav-link" href="{{ url_for('client_banner_bp.view_banners') }}">
                         <span class="sidebar-text">Banner</span>
                       </a>
                     </li>
@@ -97,7 +97,7 @@
                   role="list" id="submenu-app" aria-expanded="false">
                   <ul class="flex-column nav">
                     <li class="nav-item {% if 'bootstrap-tables' in segment %} active {% endif %}">
-                      <a class="nav-link" href="/tables-bootstrap-tables.html">
+                      <a class="nav-link" href="{{ url_for('client_galerie_bp.view_galerie') }}">
                         <span class="sidebar-text">Galerie</span>
                       </a>
                     </li>
@@ -110,6 +110,17 @@
                     <li class="nav-item {% if 'bootstrap-tables' in segment %} active {% endif %}">
                       <a class="nav-link" href="{{ url_for('client_opening_hours_bp.view_opening_hours') }}">
                         <span class="sidebar-text">Öffnungszeiten</span>
+                    </a>
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="multi-level collapse {% if 'tables-bootstrap-' in segment %} show {% endif %}"
+                  role="list" id="submenu-app" aria-expanded="false">
+                  <ul class="flex-column nav">
+                    <li class="nav-item {% if 'bootstrap-tables' in segment %} active {% endif %}">
+                      <a class="nav-link" href="{{ url_for('rating_bp.client_dashboard_ratings') }}">
+                        <span class="sidebar-text">Bewertungen</span>
                     </a>
                     </li>
                   </ul>
