--- a/app/templates/frontend/home.html
+++ b/app/templates/frontend/home.html
@@ -1,238 +1,48 @@
 {% extends "frontend/base.html" %}
 
+{% block title %}Dashboard{% endblock %}
 
-{% block title %} Dashboard {% endblock %} 
-
-<!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
-<!--Inclouden von banner-->
-
-
-
-
-
-
 <section class="section pt-5 pb-5 products-section">
     <div class="container">
-       <div class="section-header text-center">
-          <h2>Lieblings Restaurants</h2>
-          <p>Top restaurants, cafes, pubs, and bars in Ludhiana, based on trends</p>
-          <span class="line"></span>
-       </div>
-       <div class="row">
-
-          <div class="col-md-3">
-             
-
-                <div class="item pb-3">
-                   <div class="list-card bg-white h-100 rounded overflow-hidden position-relative shadow-sm">
-                      <div class="list-card-image">
-                         <div class="star position-absolute"><span class="badge badge-success"><i class="icofont-star"></i> 3.1 (300+)</span></div>
-                         <div class="favourite-heart text-danger position-absolute"><a href="detail.html"><i class="icofont-heart"></i></a></div>
-                         <div class="member-plan position-absolute"><span class="badge badge-dark">Promoted</span></div>
-                         <a href="detail.html">
-                         <img src="{{ url_for('static', filename='frontend/themes/img/list/1.png')}}" class="img-fluid item-img">
-                         </a>
-                      </div>
-                      <div class="p-3 position-relative">
-                         <div class="list-card-body">
-                            <h6 class="mb-1"><a href="detail.html" class="text-black">World Famous</a></h6>
-                            <p class="text-gray mb-3">North Indian • American • Pure veg</p>
-                            <p class="text-gray mb-3 time"><span class="bg-light text-dark rounded-sm pl-2 pb-1 pt-1 pr-2"><i class="icofont-wall-clock"></i> 20–25 min</span> <span class="float-right text-black-50"> $250 FOR TWO</span></p>
-                         </div>
-                         <div class="list-card-badge">
-                            <span class="badge badge-success">OFFER</span> <small>65% off | Use Coupon OSAHAN50</small>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-                
-
-
-             
-          </div>
-          <!-- Ende von coloumn md-3-->
-
-          <div class="col-md-3">
-             
-
-            <div class="item pb-3">
-               <div class="list-card bg-white h-100 rounded overflow-hidden position-relative shadow-sm">
-                  <div class="list-card-image">
-                     <div class="star position-absolute"><span class="badge badge-success"><i class="icofont-star"></i> 3.1 (300+)</span></div>
-                     <div class="favourite-heart text-danger position-absolute"><a href="detail.html"><i class="icofont-heart"></i></a></div>
-                     <div class="member-plan position-absolute"><span class="badge badge-dark">Promoted</span></div>
-                     <a href="detail.html">
-                     <img src="{{ url_for('static', filename='frontend/themes/img/list/1.png')}}" class="img-fluid item-img">
-                     </a>
-                  </div>
-                  <div class="p-3 position-relative">
-                     <div class="list-card-body">
-                        <h6 class="mb-1"><a href="detail.html" class="text-black">World Famous</a></h6>
-                        <p class="text-gray mb-3">North Indian • American • Pure veg</p>
-                        <p class="text-gray mb-3 time"><span class="bg-light text-dark rounded-sm pl-2 pb-1 pt-1 pr-2"><i class="icofont-wall-clock"></i> 20–25 min</span> <span class="float-right text-black-50"> $250 FOR TWO</span></p>
-                     </div>
-                     <div class="list-card-badge">
-                        <span class="badge badge-success">OFFER</span> <small>65% off | Use Coupon OSAHAN50</small>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            
-
-
-         
-          </div>
-          <!-- Ende von coloumn md-3-->
-
-
-          <div class="col-md-3">
-             
-
-        <div class="item pb-3">
-           <div class="list-card bg-white h-100 rounded overflow-hidden position-relative shadow-sm">
-              <div class="list-card-image">
-                 <div class="star position-absolute"><span class="badge badge-success"><i class="icofont-star"></i> 3.1 (300+)</span></div>
-                 <div class="favourite-heart text-danger position-absolute"><a href="detail.html"><i class="icofont-heart"></i></a></div>
-                 <div class="member-plan position-absolute"><span class="badge badge-dark">Promoted</span></div>
-                 <a href="detail.html">
-                 <img src="{{ url_for('static', filename='frontend/themes/img/list/1.png')}}" class="img-fluid item-img">
-                 </a>
-              </div>
-              <div class="p-3 position-relative">
-                 <div class="list-card-body">
-                    <h6 class="mb-1"><a href="detail.html" class="text-black">World Famous</a></h6>
-                    <p class="text-gray mb-3">North Indian • American • Pure veg</p>
-                    <p class="text-gray mb-3 time"><span class="bg-light text-dark rounded-sm pl-2 pb-1 pt-1 pr-2"><i class="icofont-wall-clock"></i> 20–25 min</span> <span class="float-right text-black-50"> $250 FOR TWO</span></p>
-                 </div>
-                 <div class="list-card-badge">
-                    <span class="badge badge-success">OFFER</span> <small>65% off | Use Coupon OSAHAN50</small>
-                 </div>
-              </div>
-           </div>
+        <div class="section-header text-center">
+            <h2>Lieblings Restaurants</h2>
+            <p>Top restaurants, cafes, pubs, and bars in Ludhiana, based on trends</p>
+            <span class="line"></span>
         </div>
-        
-
-
-     
-          </div>
-          <!-- Ende von coloumn md-3-->
-
-          <div class="col-md-3">
-             
-
-    <div class="item pb-3">
-       <div class="list-card bg-white h-100 rounded overflow-hidden position-relative shadow-sm">
-          <div class="list-card-image">
-             <div class="star position-absolute"><span class="badge badge-success"><i class="icofont-star"></i> 3.1 (300+)</span></div>
-             <div class="favourite-heart text-danger position-absolute"><a href="detail.html"><i class="icofont-heart"></i></a></div>
-             <div class="member-plan position-absolute"><span class="badge badge-dark">Promoted</span></div>
-             <a href="detail.html">
-             <img src="{{ url_for('static', filename='frontend/themes/img/list/1.png')}}" class="img-fluid item-img">
-             </a>
-          </div>
-          <div class="p-3 position-relative">
-             <div class="list-card-body">
-                <h6 class="mb-1"><a href="detail.html" class="text-black">World Famous</a></h6>
-                <p class="text-gray mb-3">North Indian • American • Pure veg</p>
-                <p class="text-gray mb-3 time"><span class="bg-light text-dark rounded-sm pl-2 pb-1 pt-1 pr-2"><i class="icofont-wall-clock"></i> 20–25 min</span> <span class="float-right text-black-50"> $250 FOR TWO</span></p>
-             </div>
-             <div class="list-card-badge">
-                <span class="badge badge-success">OFFER</span> <small>65% off | Use Coupon OSAHAN50</small>
-             </div>
-          </div>
-       </div>
+        <div class="row">
+            {% for client in clients %}
+            <div class="col-md-3">
+                <div class="item pb-3">
+                    <div class="list-card bg-white h-100 rounded overflow-hidden position-relative shadow-sm">
+                        <div class="list-card-image">
+                            <a href="{{ url_for('frontend_bp.client_detail', client_id=client.id) }}">
+                                <img src="{% if client.photo %}{{ url_for('static', filename=client.photo) }}{% else %}{{ url_for('static', filename='frontend/themes/img/list/1.png') }}{% endif %}" class="img-fluid item-img">
+                            </a>
+                        </div>
+                        <div class="p-3 position-relative">
+                            <div class="list-card-body">
+                                <h6 class="mb-1"><a href="{{ url_for('frontend_bp.client_detail', client_id=client.id) }}" class="text-black">{{ client.clientname }}</a></h6>
+                                <p class="text-gray mb-3">{{ client.street }} {{ client.house_number }}, {{ client.city }}</p>
+                                
+                                <!-- Überprüfe, ob Öffnungszeiten vorhanden sind -->
+                                {% if client.opening_hours|length > 0 %}
+                                    <p class="text-gray mb-3 time"><i class="icofont-wall-clock"></i> Öffnungszeiten: 
+                                    {{ client.opening_hours[0].open_time.strftime('%H:%M') }} - {{ client.opening_hours[0].close_time.strftime('%H:%M') }}</p>
+                                {% else %}
+                                    <p class="text-gray mb-3 time"><i class="icofont-wall-clock"></i> Öffnungszeiten: Keine Angaben</p>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
     </div>
-    
-
-
- 
-          </div>
-          <!-- Ende von coloumn md-3-->
-
-          <div class="col-md-3">
-             
-
-    <div class="item pb-3">
-       <div class="list-card bg-white h-100 rounded overflow-hidden position-relative shadow-sm">
-          <div class="list-card-image">
-             <div class="star position-absolute"><span class="badge badge-success"><i class="icofont-star"></i> 3.1 (300+)</span></div>
-             <div class="favourite-heart text-danger position-absolute"><a href="detail.html"><i class="icofont-heart"></i></a></div>
-             <div class="member-plan position-absolute"><span class="badge badge-dark">Promoted</span></div>
-             <a href="detail.html">
-             <img src="{{ url_for('static', filename='frontend/themes/img/list/1.png')}}" class="img-fluid item-img">
-             </a>
-          </div>
-          <div class="p-3 position-relative">
-             <div class="list-card-body">
-                <h6 class="mb-1"><a href="detail.html" class="text-black">World Famous</a></h6>
-                <p class="text-gray mb-3">North Indian • American • Pure veg</p>
-                <p class="text-gray mb-3 time"><span class="bg-light text-dark rounded-sm pl-2 pb-1 pt-1 pr-2"><i class="icofont-wall-clock"></i> 20–25 min</span> <span class="float-right text-black-50"> $250 FOR TWO</span></p>
-             </div>
-             <div class="list-card-badge">
-                <span class="badge badge-success">OFFER</span> <small>65% off | Use Coupon OSAHAN50</small>
-             </div>
-          </div>
-       </div>
-    </div>
-    
-
-
- 
-          </div>
-          <!-- Ende von coloumn md-3-->
-
-          <div class="col-md-3">
-             
-
-    <div class="item pb-3">
-       <div class="list-card bg-white h-100 rounded overflow-hidden position-relative shadow-sm">
-          <div class="list-card-image">
-             <div class="star position-absolute"><span class="badge badge-success"><i class="icofont-star"></i> 3.1 (300+)</span></div>
-             <div class="favourite-heart text-danger position-absolute"><a href="detail.html"><i class="icofont-heart"></i></a></div>
-             <div class="member-plan position-absolute"><span class="badge badge-dark">Promoted</span></div>
-             <a href="detail.html">
-             <img src="{{ url_for('static', filename='frontend/themes/img/list/1.png')}}" class="img-fluid item-img">
-             </a>
-          </div>
-          <div class="p-3 position-relative">
-             <div class="list-card-body">
-                <h6 class="mb-1"><a href="detail.html" class="text-black">World Famous</a></h6>
-                <p class="text-gray mb-3">North Indian • American • Pure veg</p>
-                <p class="text-gray mb-3 time"><span class="bg-light text-dark rounded-sm pl-2 pb-1 pt-1 pr-2"><i class="icofont-wall-clock"></i> 20–25 min</span> <span class="float-right text-black-50"> $250 FOR TWO</span></p>
-             </div>
-             <div class="list-card-badge">
-                <span class="badge badge-success">OFFER</span> <small>65% off | Use Coupon OSAHAN50</small>
-             </div>
-          </div>
-       </div>
-    </div>
-    
-
-
- 
-          </div>
-          <!-- Ende von coloumn md-3-->
-
-
-       </div>
-    </div>
- </section>
-
-
-
-
-
-
-
-
-
-
-
-
+</section>
 {% endblock content %}
 
-<!-- Specific Page JS goes HERE  -->
 {% block javascripts %}{% endblock javascripts %}
